--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,16 @@ THE SOFTWARE.
 
   <dependencyManagement>
     <dependencies>
+
+    <!-- https://mvnrepository.com/artifact/org.jenkins-ci.tools/maven-hpi-plugin -->
+    <dependency>
+        <groupId>org.jenkins-ci.tools</groupId>
+        <artifactId>maven-hpi-plugin</artifactId>
+        <version>2.1</version>
+    </dependency>
+
+
+
       <dependency>
         <groupId>io.jenkins.tools.bom</groupId>
         <artifactId>bom-2.346.x</artifactId>
